# ai-coding-agent-demo

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
agent/: __init__.py  main.py  orchestrator.py  system_prompts.py
agent/tools/: __init__.py  delegate.py  fs.py  memory.py  question.py  registry.py  search.py  utils.py
demo/sample_repo/: README.md
demo/sample_repo/src/auth/: login.py  register.py
demo/sample_repo/src/products/: catalog.py
demo/sample_repo/src/utils/: validation.py
