[project]
name = "ai-coding-agent"
version = "0.1.0"
description = "AI Coding Agent demo with Claude API - tool use, parallel execution, MCP integration"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.36.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
